<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DotaMote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="IpAddress">192.168.2.72</string>
    <string name="Port">12345</string>
    <string name="Disconnect">Not Connected</string>
    <string name="Connection">Connected</string>
    <string name="Ip_title">IP Address</string>
    <string name="Port_title">Enter IP Address</string>

    <string name="AlertTitle">IP Address</string>
    <string name="AlertAddTitle">Add IP Address</string>
    <string name="AlertPositiveButton">Add</string>
    <string name="AlertNegativeButton">Cancel</string>
    <string name="AlertNeutralButton">Edit</string>
    <string name="AlertEditTitle">Edit Mode</string>
    <string name="AlertEditPositiveButton">OK</string>
    <string name="AlertEditNeutralButton">Cancel</string>
    <string name="AlertEditNegativeButton">Delete</string>
    <string name="AlertIpAddressTestError">Invalid IP Address</string>
    <string name="AlertPortTestError">Invalid Port</string>



    <string name="NavSound">Sound Alert</string>
    <string name="NavVibrate">Vibrate </string>

    <!-- Strings Related to hints  -->
    <string name="AlertAddNameHint">Ex. My House</string>
    <string name="AlertAddIpAddressHint">Ex. 192.168.1.1</string>
    <string name="AlertAddIpPortHint">Ex. 12345</string>
    <string name="Connect">Connect</string>
    <string name="DisconnectB">Disconnect</string>

    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ConnectionPort">192.168.1.101</string> />

</resources>
